Fix notifications styles on mobile

--- a/src/components/Notifications/Notifications.module.scss
+++ b/src/components/Notifications/Notifications.module.scss
@@ -1,4 +1,5 @@
 @import '../../styles/colors';
+@import '../../styles/sizing';
 
 .notifications {
   display: flex;
@@ -22,9 +23,11 @@
 
   .notification {
     align-items: center;
+    border-radius: 5px;
     display: flex;
-    margin: 20px auto;
+    margin: 5px auto;
     max-width: 700px;
+    padding: 15px;
     transition: 0.3s all ease;
     width: 90%;
 
@@ -37,6 +40,10 @@
           cursor: default;
         }
       }
+    }
+
+    &:hover:not(.read) {
+      background: $gray-60;
     }
 
     &.dismissed {
@@ -57,19 +64,21 @@
       width: 75%;
 
       .title {
+        cursor: default;
         font-size: 1.1em;
         font-weight: bold;
         margin: 7px auto;
       }
-  
+
       .message {
+        cursor: default;
         margin-bottom: 5px;
       }
-  
+
       .timestamp {
         font-size: 0.8em;
         opacity: 0.7;
-      } 
+      }
     }
 
     .controls {
@@ -95,6 +104,27 @@
       .dismissButton {
         background: transparent;
         margin-left: 10px;
+      }
+    }
+  }
+}
+
+@media screen and (max-width: $appMinWidth) {
+  .notifications {
+    .notification {
+      .content {
+        font-size: 12px;
+
+        .title {
+          margin: 3px auto;
+        }
+      }
+
+      .profilePic {
+        img {
+          height: 25px;
+          width: 25px;
+        }
       }
     }
   }
